[tool.poetry]
name = "web-module-05"
version = "1.0.0"
description = ""
authors = ["Vladislav <109065019+TimVladislav13010@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_module_05"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
websockets = "^10.4"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
